<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_attachments"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:background="@color/cardBoardBackground"
    android:elevation="10dp"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    android:paddingTop="24dp"
    android:paddingBottom="16dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/new_message_attachments"
        android:textColor="@color/textDarkColor"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout style="@style/MessageAttachmentsItem">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:src="@drawable/attachments_photo" />

            <TextView
                style="@style/MessageAttachmentsItem.text"
                android:layout_centerVertical="true"
                android:text="@string/attachment_image" />

        </RelativeLayout>

        <RelativeLayout style="@style/MessageAttachmentsItem">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:src="@drawable/attachments_camara" />

            <TextView
                style="@style/MessageAttachmentsItem.text"
                android:layout_centerVertical="true"
                android:text="@string/attachment_camera" />

        </RelativeLayout>

        <RelativeLayout style="@style/MessageAttachmentsItem">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:src="@drawable/attachments_cam" />

            <TextView
                style="@style/MessageAttachmentsItem.text"
                android:layout_centerVertical="true"
                android:text="@string/attachment_camera_movie" />

        </RelativeLayout>

        <RelativeLayout style="@style/MessageAttachmentsItem">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:src="@drawable/attachments_mic" />

            <TextView
                style="@style/MessageAttachmentsItem.text"
                android:layout_centerVertical="true"
                android:text="@string/attachment_record_sound" />

        </RelativeLayout>

        <RelativeLayout style="@style/MessageAttachmentsItem">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:src="@drawable/attachments_location" />

            <TextView
                style="@style/MessageAttachmentsItem.text"
                android:layout_centerVertical="true"
                android:text="@string/attachment_location" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>