<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardBoardBackground"
        android:orientation="vertical">

        <TextView
            android:id="@+id/contacts_other_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/contact_settings"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividerColor" />

        <RelativeLayout
            android:id="@+id/contacts_edit_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cardboard_ripple">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/contacts_icon_palette"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:src="@drawable/ic_image_color_lens_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ContactsButtonText"
                android:text="@string/contact_choose_color" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="56dp"
            android:background="@color/dividerColor" />

        <RelativeLayout
            android:id="@+id/contacts_edit_alias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cardboard_ripple">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/contacts_icon_edit"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:src="@drawable/ic_editor_mode_edit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ContactsButtonText"
                android:text="@string/contact_edit_alias" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:background="@color/dividerColor" />

        <RelativeLayout
            android:id="@+id/contacts_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cardboard_ripple">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/contacts_icon_trash"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:src="@drawable/ic_action_delete" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ContactsButtonText"
                android:text="@string/contact_delete" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:background="@color/dividerColor" />

        <RelativeLayout
            android:id="@+id/contacts_block_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cardboard_ripple">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/contacts_icon_lock"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:src="@drawable/ic_action_lock" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ContactsButtonText"
                android:text="@string/contact_block" />


        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>