<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="60dp"
    android:background="@null">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:elevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/simpleDialogBackground"
            android:orientation="vertical"
            android:paddingBottom="25dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="80dp">


            <TextView
                android:id="@+id/simple_dialog_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/dialog_edit_user_status"
                android:textColor="@color/textWhiteColor"
                android:textSize="20sp" />


            <LinearLayout
                android:id="@+id/simple_dialog_status_online"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="4dp"
                android:background="@drawable/status_background"
                android:backgroundTint="@color/contactsTransparentBar"
                android:layout_marginTop="4dp"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                >

                <ImageView
                    style="@style/CircleUserStatus"
                    android:layout_gravity="center"
                    android:src="@drawable/status_circle"
                    android:tint="@color/statusOnline" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/dialog_status_online"
                    android:textColor="@color/textWhiteColor"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/simple_dialog_status_away"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:clickable="true"
                android:background="@drawable/status_background"
                android:backgroundTint="@color/contactsTransparentBar"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingTop="8dp">

                <ImageView
                    style="@style/CircleUserStatus"
                    android:layout_gravity="center"
                    android:src="@drawable/status_circle"
                    android:tint="@color/statusAway" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/dialog_status_away"
                    android:textColor="@color/textWhiteColor"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/simple_dialog_status_busy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:clickable="true"
                android:background="@drawable/status_background"
                android:backgroundTint="@color/contactsTransparentBar"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingTop="8dp">

                <ImageView
                    style="@style/CircleUserStatus"
                    android:layout_gravity="center"
                    android:src="@drawable/status_circle"
                    android:tint="@color/statusBusy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/dialog_status_busy"
                    android:textColor="@color/textWhiteColor"
                    android:textSize="16sp" />


            </LinearLayout>


            <Button
                android:id="@+id/simple_dialog_android_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/simpleDialogIconButton"
                android:fontFamily="sans-serif-light"
                android:text="@string/dialog_confirm"
                android:textColor="@color/simpleDialogTextButton" />

            <Button
                android:id="@+id/simple_dialog_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/simpleDialogIconButton"
                android:fontFamily="sans-serif-light"
                android:text="@string/dialog_cancel"
                android:textColor="@color/simpleDialogTextButton" />


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/simple_dialog_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/status_circle"
        android:backgroundTint="@color/homeColorToolbar"
        android:baselineAligned="false"
        android:elevation="4dp"
        android:focusable="false"
        android:padding="36dp">

        <ImageView
            android:id="@+id/simple_dialog_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_black_48dp"
            android:tint="@color/textWhiteColor" />

    </LinearLayout>


</RelativeLayout>



